src/test/ui/consts/const-eval/generic-slice.stderr
error[E0597]: `x` does not live long enough
  --> $DIR/generic-slice.rs:15:9
   |
LL | /     const EMPTY_SLICE_REF: &'a &'static [T] = {
LL | |         let x: &'static [T] = &[];
LL | |         &x
   | |         ^^ borrowed value does not live long enough
LL | |
LL | |     };
   | |_____-- borrow later used here
   |       |
   |       `x` dropped here while still borrowed

error[E0597]: `x` does not live long enough
  --> $DIR/generic-slice.rs:27:5
   |
LL | / static mut INTERIOR_MUT_AND_DROP_REF: &'static &'static [std::cell::RefCell<Vec<i32>>] = {
LL | |     let x: &[_] = &[];
LL | |     &x
   | |     ^^ borrowed value does not live long enough
LL | |
LL | | };
   | |_-- borrow later used here
   |   |
   |   `x` dropped here while still borrowed

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0597`.
